Fixed canvas still overflowing beneath window
The effect was that pressing the down arrow also scrolled the window down, even
if the scrollbar is hidden.

The height of canvas is now true 100% of window.

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
-body {
+html, body {
+    height: 100%;
     padding: 0px;
     margin: 0px;
     overflow: hidden;
